chore(seed)updating want

--- a/assets/test/qa-want-formatted.html
+++ b/assets/test/qa-want-formatted.html
@@ -37,8 +37,7 @@
     </div>
     <div class="col-lg-3">
       <div class="side block">
-        <li:wants-button href="http://distributed.qa.lcloud.com/widgets/wants/product-sony-hawley-tv" min-price="2500" max-price="3400"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
-        <hr />
+ <li:wants-button href="http://distributed.qa.lcloud.com/widgets/wants/product-sony-hawley-tv" buy-reason-id-list="7,8,9,10,11" min-price="1999" max-price="3000" default-price="2500"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>       <hr />
       </div>
     </div>
   </div>
