chore(seed): updating want

--- a/assets/test/qa-want.html
+++ b/assets/test/qa-want.html
@@ -6,6 +6,5 @@
   <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
-  <li:wants-button href="http://distributed.qa.lcloud.com/widgets/wants/product-sony-hawley-tv" min-price="2500" max-price="3400"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
-</body>
+<li:wants-button href="http://distributed.qa.lcloud.com/widgets/wants/product-sony-hawley-tv" buy-reason-id-list="7,8,9,10,11" min-price="1999" max-price="3000" default-price="2500"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button></body>
 </html>
