chore(seed): updating endorsements

--- a/assets/test/qa-endorsement-formatted.html
+++ b/assets/test/qa-endorsement-formatted.html
@@ -37,8 +37,8 @@
     </div>
     <div class="col-lg-3">
       <div class="side block">
-<li:endorsements-widget id-list="26,27,28,29,31" href="http://distributed.qa.lcloud.com/widgets/endorsements/product-sony-hawley-tv"></li:endorsements-widget>      </div>
-    </div>
+      <li:endorsements-widget id-list="27,28,29,30,26" href="http://distributed.qa.lcloud.com/widgets/endorsements/product-sony-hawley-tv"></li:endorsements-widget>
+   </div>
   </div>
   <div class="row">
     <div class="col-lg-12">
