--- a/assets/test/hawleylocalwant1.html
+++ b/assets/test/hawleylocalwant1.html
@@ -4,6 +4,6 @@
 	<script id="li-syndicate" src="http://localhost:1337/assets/widgets/js/scripts/syndicate.js"></script>
 	</head>
 	<body>
-	<li:wants-widget href="http://localhost:1337/widgets/wants/Sht_kvGMSxqFRqeh_dpS9g"></li:wants-widget>
+<li:wants-button href="http://localhost:1337/widgets/wants/product-sony-hawley-tv" buy-reason-id-list="10,11,12" min-price="50" max-price="100" default-price="75"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
 	</body>
 </html>
