--- a/assets/test/qa-all-formatted.html
+++ b/assets/test/qa-all-formatted.html
@@ -35,13 +35,13 @@
   <div class="row">
     <div class="col-lg-9">
       <div class="main block">
-        <li:reviews-widget href="http://distributed.qa.lcloud.com/widgets/reviews/product-sony-hawley-tv"></li:reviews-widget>
+        <li:reviews-widget sku="hawley-tv" company-guid="sony"></li:reviews-widget>
       </div>
     </div>
     <div class="col-lg-3">
       <div class="side block">
-      <li:wants-button href="http://distributed.qa.lcloud.com/widgets/wants/product-sony-hawley-tv" buy-reason-id-list="7,8,9,10,11" min-price="1999" max-price="3000" default-price="2500"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>       <hr />
-      <li:endorsements-widget id-list="27,28,29,30,26" href="http://distributed.qa.lcloud.com/widgets/endorsements/product-sony-hawley-tv"></li:endorsements-widget>
+      <li:wants-button buy-reason-id-list="7,8,9,10,11" sku="hawley-tv" company-guid="sony" min-price="2500" max-price="3500" default-price="3000"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+     <li:endorsements-widget id-list="26,27,28,30,29" sku="hawley-tv" company-guid="sony"></li:endorsements-widget>
       </div>
     </div>
   </div>
