--- a/assets/test/qa-endorsement-formatted.html
+++ b/assets/test/qa-endorsement-formatted.html
@@ -37,7 +37,7 @@
     </div>
     <div class="col-lg-3">
       <div class="side block">
-      <li:endorsements-widget id-list="27,28,29,30,26" href="http://distributed.qa.lcloud.com/widgets/endorsements/product-sony-hawley-tv"></li:endorsements-widget>
+      <li:endorsements-widget id-list="26,27,28,30,29" sku="hawley-tv" company-guid="sony"></li:endorsements-widget>
    </div>
   </div>
   <div class="row">
