chore(seed): adding company

--- a/assets/test/qa-endorsement.html
+++ b/assets/test/qa-endorsement.html
@@ -6,6 +6,6 @@
   <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
-  <li:endorsements-widget id-list="27,28,29,30,26" href="http://distributed.qa.lcloud.com/widgets/endorsements/product-sony-hawley-tv"></li:endorsements-widget>
+  <li:endorsements-widget id-list="26,27,28,30,29" sku="hawley-tv" company-guid="sony"></li:endorsements-widget>
 </body>
 </html>
