--- a/assets/test/qa-want-formatted.html
+++ b/assets/test/qa-want-formatted.html
@@ -32,12 +32,11 @@
   <div class="row">
     <div class="col-lg-9">
       <div class="main block">
-
       </div>
     </div>
     <div class="col-lg-3">
       <div class="side block">
- <li:wants-button href="http://distributed.qa.lcloud.com/widgets/wants/product-sony-hawley-tv" buy-reason-id-list="7,8,9,10,11" min-price="1999" max-price="3000" default-price="2500"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>       <hr />
+       <li:wants-button buy-reason-id-list="7,8,9,10,11" sku="hawley-tv" company-guid="sony" min-price="2500" max-price="3500" default-price="3000"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
       </div>
     </div>
   </div>
