--- a/assets/test/qa-rnr-formatted.html
+++ b/assets/test/qa-rnr-formatted.html
@@ -32,7 +32,7 @@
 <div class="row">
   <div class="col-lg-9">
     <div class="main block">
-      <li:reviews-widget href="http://distributed.qa.lcloud.com/widgets/reviews/product-sony-hawley-tv"></li:reviews-widget>
+     <li:reviews-widget sku="hawley-tv" company-guid="sony"></li:reviews-widget>
     </div>
   </div>
   <div class="col-lg-3">
