chore(seed):updating widget

--- a/assets/test/localtv1.html
+++ b/assets/test/localtv1.html
@@ -4,6 +4,6 @@
     <script id="li-syndicate" src="http://localhost:1337/assets/widgets/js/scripts/syndicate.js"></script>
   </head>
   <body>
-    <li:reviews-widget href="http://localhost:1337/widgets/reviews/product-sony-hawley-tv"></li:reviews-widget>
+    <li:reviews-widget sku="hawley-tv" company-guid="sony"></li:reviews-widget>
   </body>
 </html>
