--- a/assets/test/qa-want-formatted.html
+++ b/assets/test/qa-want-formatted.html
@@ -36,8 +36,7 @@
     </div>
     <div class="col-lg-3">
       <div class="side block">
-       <li:wants-button buy-reason-id-list="7,8,9,10,11" sku="hawley-tv" company-guid="sony" min-price="2500" max-price="3500" default-price="3000"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
-      </div>
+       <li:wants-button buy-reason-id-list="1,2,3,4,5" sku="hawley-tv" company-guid="sony" min-price="2500" max-price="3300" default-price="2799"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>      </div>
     </div>
   </div>
   <div class="row">
