--- a/assets/test/qaGobletOfFire.html
+++ b/assets/test/qaGobletOfFire.html
@@ -1,6 +1,7 @@
 <!doctype html>
+<html></html>
 <head>
-  <title>Widgets - All</title>
+  <title>boundry test</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
