chore(test): new widget

--- a/assets/test/qa-want-formatted.html
+++ b/assets/test/qa-want-formatted.html
@@ -30,13 +30,14 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-lg-9">
+    <div class="col-lg-8">
       <div class="main block">
       </div>
     </div>
-    <div class="col-lg-3">
+    <div class="col-lg-4">
       <div class="side block">
-       <li:wants-button buy-reason-id-list="1,2,3,4,5" sku="hawley-tv" company-guid="sony" min-price="2500" max-price="3300" default-price="2799"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>      </div>
+      <li:wants-button buy-reason-id-list="54,55,56,57,58" sku="hawley-tv" company-guid="sony" min-price="325" max-price="449" default-price="400"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+      </div>
     </div>
   </div>
   <div class="row">
