chore(seed):more data

--- a/assets/test/qa1-endorsement-formatted.html
+++ b/assets/test/qa1-endorsement-formatted.html
@@ -37,7 +37,7 @@
     </div>
     <div class="col-lg-4">
       <div class="side block">
-      <li:endorsements-widget id-list="54,55,56,57,58" sku="hawley-tv" company-guid="sony"></li:endorsements-widget>
+      <li:endorsements-widget id-list="69,70,74,76,78" sku="hawley1" company-guid="sony"></li:endorsements-widget>
    </div>
   </div>
   <div class="row">
