--- a/assets/test/qa2-rnr-formatted.html
+++ b/assets/test/qa2-rnr-formatted.html
@@ -32,7 +32,7 @@
 <div class="row">
   <div class="col-lg-8">
     <div class="main block">
-     <li:reviews-widget sku="hawley-tv" company-guid="sony"></li:reviews-widget>
+     <li:reviews-widget sku="hawley2" company-guid="sony"></li:reviews-widget>
     </div>
   </div>
   <div class="col-lg-4">
