--- a/assets/test/qa1-all-formatted.html
+++ b/assets/test/qa1-all-formatted.html
@@ -35,13 +35,14 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="main block">
-        <li:reviews-widget sku="hawley-tv" company-guid="sony"></li:reviews-widget>
+        <li:reviews-widget sku="hawley1" company-guid="sony"></li:reviews-widget>
       </div>
     </div>
     <div class="col-lg-4">
       <div class="side block">
-        <li:wants-button buy-reason-id-list="54,55,56,57,58" sku="hawley-tv" company-guid="sony" min-price="325" max-price="449" default-price="400"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
-        <li:endorsements-widget id-list="54,55,56,57,58" sku="hawley-tv" company-guid="sony"></li:endorsements-widget>      </div>
+        <li:wants-button buy-reason-id-list="69,73,75,77,72" sku="hawley1" company-guid="sony" min-price="5" max-price="11" default-price="7"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+        <li:endorsements-widget id-list="69,70,74,76,78" sku="hawley1" company-guid="sony"></li:endorsements-widget> 
+        </div>
     </div>
   </div>
   <div class="row">
