--- a/assets/test/qa1-all.html
+++ b/assets/test/qa1-all.html
@@ -6,10 +6,10 @@
   <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
-    <li:reviews-widget sku="hawley-tv" company-guid="sony"></li:reviews-widget>
+    <li:reviews-widget sku="hawley1" company-guid="sony"></li:reviews-widget>
   <hr />
-    <li:wants-button buy-reason-id-list="54,55,56,57,58" sku="hawley-tv" company-guid="sony" min-price="325" max-price="449" default-price="400"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+    <li:wants-button buy-reason-id-list="69,73,75,77,72" sku="hawley1" company-guid="sony" min-price="5" max-price="11" default-price="7"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
   <hr />
-    <li:endorsements-widget id-list="54,55,56,57,58" sku="hawley-tv" company-guid="sony"></li:endorsements-widget>
+    <li:endorsements-widget id-list="69,70,74,76,78" sku="hawley1" company-guid="sony"></li:endorsements-widget>
 </body>
 </html>
