--- a/assets/test/qa1-rnr.html
+++ b/assets/test/qa1-rnr.html
@@ -6,6 +6,6 @@
   <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
-  <li:reviews-widget sku="hawley-tv" company-guid="sony"></li:reviews-widget>
+  <li:reviews-widget sku="hawley1" company-guid="sony"></li:reviews-widget>
 </body>
 </html>
