--- a/assets/test/qa2-all-formatted.html
+++ b/assets/test/qa2-all-formatted.html
@@ -35,13 +35,14 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="main block">
-        <li:reviews-widget sku="hawley-tv" company-guid="sony"></li:reviews-widget>
+        <li:reviews-widget sku="hawley2" company-guid="sony"></li:reviews-widget>
       </div>
     </div>
     <div class="col-lg-4">
       <div class="side block">
-        <li:wants-button buy-reason-id-list="54,55,56,57,58" sku="hawley-tv" company-guid="sony" min-price="325" max-price="449" default-price="400"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
-        <li:endorsements-widget id-list="54,55,56,57,58" sku="hawley-tv" company-guid="sony"></li:endorsements-widget>      </div>
+        <li:wants-button buy-reason-id-list="59,60,66,62,67" sku="hawley2" company-guid="sony" min-price="15" max-price="25" default-price="19"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+        <li:endorsements-widget id-list="59,60,66,62,63" sku="hawley2" company-guid="sony"></li:endorsements-widget>      
+        </div>
     </div>
   </div>
   <div class="row">
