--- a/assets/test/qa2-endorsement-formatted.html
+++ b/assets/test/qa2-endorsement-formatted.html
@@ -37,7 +37,7 @@
     </div>
     <div class="col-lg-4">
       <div class="side block">
-      <li:endorsements-widget id-list="54,55,56,57,58" sku="hawley-tv" company-guid="sony"></li:endorsements-widget>
+      <li:endorsements-widget id-list="59,60,66,62,63" sku="hawley2" company-guid="sony"></li:endorsements-widget>
    </div>
   </div>
   <div class="row">
