--- a/assets/test/qa2-want-formatted.html
+++ b/assets/test/qa2-want-formatted.html
@@ -36,7 +36,7 @@
     </div>
     <div class="col-lg-4">
       <div class="side block">
-      <li:wants-button buy-reason-id-list="54,55,56,57,58" sku="hawley-tv" company-guid="sony" min-price="325" max-price="449" default-price="400"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+      <li:wants-button buy-reason-id-list="59,60,66,62,67" sku="hawley2" company-guid="sony" min-price="15" max-price="25" default-price="19"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
       </div>
     </div>
   </div>
