chore(seed): update ids

--- a/assets/test/qa2-endorsement-formatted.html
+++ b/assets/test/qa2-endorsement-formatted.html
@@ -37,7 +37,7 @@
     </div>
     <div class="col-lg-4">
       <div class="side block">
-      <li:endorsements-widget id-list="59,60,66,62,63" sku="hawley2" company-guid="sony"></li:endorsements-widget>
+      <li:endorsements-widget reasons-list="[&quot;Thai: ฉันสามารถกิน้ว&quot;,&quot;Bengali: গাছ সরে জমি&quot;,&quot;来&quot;,&quot;English: I can eat glass&quot;,&quot;Danish:Jeg kan spise&quot;]" sku="hawley2" company-guid="sony"></li:endorsements-widget>
    </div>
   </div>
   <div class="row">
