--- a/assets/test/qa-all.html
+++ b/assets/test/qa-all.html
@@ -8,8 +8,8 @@
 <body style="padding:0;margin:0;">
     <li:reviews-widget sku="hawley-tv" company-guid="sony"></li:reviews-widget>
   <hr />
-    <li:wants-button buy-reason-id-list="54,55,56,57,58" sku="hawley-tv" company-guid="sony" min-price="325" max-price="449" default-price="400"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+    <li:wants-button buy-reasons-list="[&quot;Shipping Included&quot;,&quot;Ease of Purchase&quot;,&quot;Customer Service&quot;,&quot;Customer Reviews&quot;,&quot;Financing&quot;]" sku="hawley-tv" company-guid="sony" min-price="325" max-price="449" default-price="400"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
   <hr />
-    <li:endorsements-widget id-list="54,55,56,57,58" sku="hawley-tv" company-guid="sony"></li:endorsements-widget>
+	<li:endorsements-widget reasons-list="[&quot;long lifespan&quot;,&quot;Slim Enclosure&quot;,&quot;Warranty&quot;,&quot;4K&quot;,&quot;Full array backlit&quot;]" sku="hawley-tv" company-guid="sony"></li:endorsements-widget>
 </body>
 </html>
