--- a/assets/test/qa-endorsement-formatted.html
+++ b/assets/test/qa-endorsement-formatted.html
@@ -37,7 +37,7 @@
     </div>
     <div class="col-lg-4">
       <div class="side block">
-      <li:endorsements-widget id-list="54,55,56,57,58" sku="hawley-tv" company-guid="sony"></li:endorsements-widget>
+      <li:endorsements-widget reasons-list="[&quot;long lifespan&quot;,&quot;Slim Enclosure&quot;,&quot;Warranty&quot;,&quot;4K&quot;,&quot;Full array backlit&quot;]" sku="hawley-tv" company-guid="sony"></li:endorsements-widget>
    </div>
   </div>
   <div class="row">
