--- a/assets/test/qa-want.html
+++ b/assets/test/qa-want.html
@@ -6,6 +6,6 @@
   <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
-  <li:wants-button buy-reason-id-list="54,55,56,57,58" sku="hawley-tv" company-guid="sony" min-price="325" max-price="449" default-price="400"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+  <li:wants-button buy-reasons-list="[&quot;Shipping Included&quot;,&quot;Ease of Purchase&quot;,&quot;Customer Service&quot;,&quot;Customer Reviews&quot;,&quot;Financing&quot;]" sku="hawley-tv" company-guid="sony" min-price="325" max-price="449" default-price="400"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
 </body>
 </html>
