--- a/assets/test/qa1-endorsement-formatted.html
+++ b/assets/test/qa1-endorsement-formatted.html
@@ -37,7 +37,7 @@
     </div>
     <div class="col-lg-4">
       <div class="side block">
-      <li:endorsements-widget id-list="69,70,74,76,78" sku="hawley1" company-guid="sony"></li:endorsements-widget>
+      <li:endorsements-widget reasons-list="[&quot;Endorsement Reason 1 30 char$%&quot;,&quot;Endorsement Reason 2 30 char()&quot;,&quot;Endorsement Reason 5 30 char%%&quot;,&quot;*&quot;,&quot;Endorsement Reason 6 30 char##&quot;]" sku="hawley1" company-guid="sony"></li:endorsements-widget>
    </div>
   </div>
   <div class="row">
