--- a/assets/test/qa1-endorsement.html
+++ b/assets/test/qa1-endorsement.html
@@ -6,6 +6,6 @@
   <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
   <body style="padding:0;margin:0;">
-  <li:endorsements-widget id-list="69,70,74,76,78" sku="hawley1" company-guid="sony"></li:endorsements-widget>
+  <li:endorsements-widget reasons-list="[&quot;Endorsement Reason 1 30 char$%&quot;,&quot;Endorsement Reason 2 30 char()&quot;,&quot;Endorsement Reason 5 30 char%%&quot;,&quot;*&quot;,&quot;Endorsement Reason 6 30 char##&quot;]" sku="hawley1" company-guid="sony"></li:endorsements-widget>
 </body>
 </html>
