--- a/assets/test/qa1-want-formatted.html
+++ b/assets/test/qa1-want-formatted.html
@@ -36,7 +36,7 @@
     </div>
     <div class="col-lg-4">
       <div class="side block">
-      <li:wants-button buy-reason-id-list="69,73,75,77,72" sku="hawley1" company-guid="sony" min-price="5" max-price="11" default-price="7"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+      <li:wants-button buy-reasons-list="[&quot;Buy Reason 1 30 char()#&amp;123456&quot;,&quot;Buy Reason 5 30 char%%@#123456&quot;,&quot;Buy Reason 7 30 char**@#123456&quot;,&quot;Buy Reason 6 30 char##@#123456&quot;,&quot;$&quot;]" sku="hawley1" company-guid="sony" min-price="5" max-price="11" default-price="7"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
       </div>
     </div>
   </div>
