--- a/assets/test/qa1-want.html
+++ b/assets/test/qa1-want.html
@@ -6,6 +6,6 @@
   <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
-  <li:wants-button buy-reason-id-list="69,73,75,77,72" sku="hawley1" company-guid="sony" min-price="5" max-price="11" default-price="7"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+  <li:wants-button buy-reasons-list="[&quot;Buy Reason 1 30 char()#&amp;123456&quot;,&quot;Buy Reason 5 30 char%%@#123456&quot;,&quot;Buy Reason 7 30 char**@#123456&quot;,&quot;Buy Reason 6 30 char##@#123456&quot;,&quot;$&quot;]" sku="hawley1" company-guid="sony" min-price="5" max-price="11" default-price="7"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
 </body>
 </html>
