--- a/assets/test/qa2-endorsement.html
+++ b/assets/test/qa2-endorsement.html
@@ -6,6 +6,6 @@
   <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
   <body style="padding:0;margin:0;">
-  <li:endorsements-widget id-list="59,60,66,62,63" sku="hawley2" company-guid="sony"></li:endorsements-widget>
+  <li:endorsements-widget reasons-list="[&quot;Thai: ฉันสามารถกิน้ว&quot;,&quot;Bengali: গাছ সরে জমি&quot;,&quot;来&quot;,&quot;English: I can eat glass&quot;,&quot;Danish:Jeg kan spise&quot;]" sku="hawley2" company-guid="sony"></li:endorsements-widget>
 </body>
 </html>
