--- a/assets/test/index.html
+++ b/assets/test/index.html
@@ -148,6 +148,24 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-6">
+          <div class="panel panel-default">
+            <div class="panel-heading">dev-ecohaus widgets all"</div>
+            <div class="panel-body">
+              <ul class="list-item-group">
+                <li class="list-item">
+                  <a href="/test/distributed-qa-nest.html">RnR</a>
+                </li>
+                <li class="list-item">
+                  <a href="/test/distributed-qa-thermostat.html">Want</a>
+                </li>
+                <li class="list-item">
+                  <a href="/test/distributed-qa-wemo.html">Endorsement</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
