chore(seed): update

--- a/assets/test/index.html
+++ b/assets/test/index.html
@@ -154,13 +154,13 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
-                  <a href="/test/distributed-qa-nest.html">RnR</a>
+                  <a href="/test/distributed-qa-nest.html">Nest</a>
                 </li>
                 <li class="list-item">
-                  <a href="/test/distributed-qa-thermostat.html">Want</a>
+                  <a href="/test/distributed-qa-thermostat.html">Themostat</a>
                 </li>
                 <li class="list-item">
-                  <a href="/test/distributed-qa-wemo.html">Endorsement</a>
+                  <a href="/test/distributed-qa-wemo.html">Wemo</a>
                 </li>
               </ul>
             </div>
