chore(seed):update

--- a/assets/test/index.html
+++ b/assets/test/index.html
@@ -150,7 +150,7 @@
         </div>
         <div class="col-lg-6">
           <div class="panel panel-default">
-            <div class="panel-heading">dev-ecohaus widgets all"</div>
+            <div class="panel-heading">dev-ecohaus/distributed.qa widgets</div>
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
