chore(seed): live pages

--- a/assets/live/index.html
+++ b/assets/live/index.html
@@ -45,7 +45,7 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
-                  <a href="/live/nest-formatted.html">RnR</a>
+                  <a href="/live/nest-rnr-formatted.html">RnR</a>
                 </li>
                 <li class="list-item">
                   <a href="/live/nest-want-formatted.html">Want</a>
@@ -68,16 +68,16 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
-                  <a href="/live/qa1-rnr.html">RnR</a>
+                  <a href="/live/thermostat-rnr.html">RnR</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa1-want.html">Want</a>
+                  <a href="/live/thermostat-want.html">Want</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa1-endorsement.html">Endorsement</a>
+                  <a href="/live/thermostat-endorsement.html">Endorsement</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa1-all.html">All</a>
+                  <a href="/live/thermostat-all.html">All</a>
                 </li>
               </ul>
             </div>
@@ -89,16 +89,16 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
-                  <a href="/live/qa1-rnr-formatted.html">RnR</a>
+                  <a href="/live/thermostat-rnr-formatted.html">RnR</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa1-want-formatted.html">Want</a>
+                  <a href="/live/thermostat-want-formatted.html">Want</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa1-endorsement-formatted.html">Endorsement</a>
+                  <a href="/live/thermostat-endorsement-formatted.html">Endorsement</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa1-all-formatted.html">All</a>
+                  <a href="/live/thermostat-all-formatted.html">All</a>
                 </li>
               </ul>
             </div>
@@ -112,16 +112,16 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
-                  <a href="/live/qa2-rnr.html">RnR</a>
+                  <a href="/live/wemo-rnr.html">RnR</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-want.html">Want</a>
+                  <a href="/live/wemo-want.html">Want</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-endorsement.html">Endorsement</a>
+                  <a href="/live/wemo-endorsement.html">Endorsement</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-all.html">All</a>
+                  <a href="/live/wemo-all.html">All</a>
                 </li>
               </ul>
             </div>
@@ -133,16 +133,16 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
-                  <a href="/live/qa2-rnr-formatted.html">RnR</a>
+                  <a href="/live/wemo-rnr-formatted.html">RnR</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-want-formatted.html">Want</a>
+                  <a href="/live/wemo-want-formatted.html">Want</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-endorsement-formatted.html">Endorsement</a>
+                  <a href="/live/wemo-endorsement-formatted.html">Endorsement</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-all-formatted.html">All</a>
+                  <a href="/live/wemo-all-formatted.html">All</a>
                 </li>
               </ul>
             </div>
@@ -153,16 +153,16 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
-                  <a href="/live/qa2-rnr-formatted.html">RnR</a>
+                  <a href="/live/mount-rnr-formatted.html">RnR</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-want-formatted.html">Want</a>
+                  <a href="/live/mount-want-formatted.html">Want</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-endorsement-formatted.html">Endorsement</a>
+                  <a href="/live/mount-endorsement-formatted.html">Endorsement</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-all-formatted.html">All</a>
+                  <a href="/live/mount-all-formatted.html">All</a>
                 </li>
               </ul>
             </div>
@@ -172,16 +172,16 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
-                  <a href="/live/qa2-rnr-formatted.html">RnR</a>
+                  <a href="/live/mount-rnr-formatted.html">RnR</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-want-formatted.html">Want</a>
+                  <a href="/live/mount-want-formatted.html">Want</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-endorsement-formatted.html">Endorsement</a>
+                  <a href="/live/mount-endorsement-formatted.html">Endorsement</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-all-formatted.html">All</a>
+                  <a href="/live/mount-all-formatted.html">All</a>
                 </li>
               </ul>
             </div>
@@ -191,16 +191,16 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
-                  <a href="/live/qa2-rnr-formatted.html">RnR</a>
+                  <a href="/live/rail-rnr.html">RnR</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-want-formatted.html">Want</a>
+                  <a href="/live/rail-want.html">Want</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-endorsement-formatted.html">Endorsement</a>
+                  <a href="/live/rail-endorsement.html">Endorsement</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-all-formatted.html">All</a>
+                  <a href="/live/rail-all.html">All</a>
                 </li>
               </ul>
             </div>
@@ -210,16 +210,16 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
-                  <a href="/live/qa2-rnr-formatted.html">RnR</a>
+                  <a href="/live/rail-rnr-formatted.html">RnR</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-want-formatted.html">Want</a>
+                  <a href="/live/rail-want-formatted.html">Want</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-endorsement-formatted.html">Endorsement</a>
+                  <a href="/live/rail-endorsement-formatted.html">Endorsement</a>
                 </li>
                 <li class="list-item">
-                  <a href="/live/qa2-all-formatted.html">All</a>
+                  <a href="/live/rail-all-formatted.html">All</a>
                 </li>
               </ul>
             </div>
