chore(seed): live again

--- a/assets/live/index.html
+++ b/assets/live/index.html
@@ -148,6 +148,9 @@
             </div>
           </div>
         </div>
+        </div>
+        <div class="row">
+        <div class="col-lg-6">
           <div class="panel panel-default">
             <div class="panel-heading">Widget Full Page - IronRidge Ballasted Roof Mount, self-describing strings</div>
             <div class="panel-body">
@@ -167,7 +170,9 @@
               </ul>
             </div>
           </div>
-        </div>          <div class="panel panel-default">
+          </div>
+        <div class="col-lg-6">
+          <div class="panel panel-default">
             <div class="panel-heading">Widget Formatted Page- IronRidge Ballasted Roof Mount, self-describing strings</div>
             <div class="panel-body">
               <ul class="list-item-group">
@@ -186,7 +191,11 @@
               </ul>
             </div>
           </div>
-        </div>          <div class="panel panel-default">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="panel panel-default">
             <div class="panel-heading">Widget Full Page -  IronRidge standard rail, multi-byte languages</div>
             <div class="panel-body">
               <ul class="list-item-group">
@@ -205,7 +214,9 @@
               </ul>
             </div>
           </div>
-        </div>          <div class="panel panel-default">
+          </div>
+        <div class="col-lg-6">
+          <div class="panel panel-default">
             <div class="panel-heading">Widget Formatted Page- IronRidge standard rail, multi-byte languages</div>
             <div class="panel-body">
               <ul class="list-item-group">
