chore(seed):updated dev page

--- a/assets/test/index.html
+++ b/assets/test/index.html
@@ -9,9 +9,9 @@
     <nav class="navbar navbar-default" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" ng-href="/test">¡TEST PAGES!</a>
+          <a class="navbar-brand" ng-href="/test">dev-ecohaus widgets</a>
           <ul class="nav navbar-nav">
-            <li class="active"><a ng-href="/test">Examples</a></li>
+            <li class="active"><a ng-href="/test">dev-ecohausgotwidgets.gotpantheon.com</a></li>
           </ul>
         </div>
       </div>
