--- a/assets/test/qa-all.html
+++ b/assets/test/qa-all.html
@@ -6,6 +6,8 @@
   <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
+	<script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
+  <hr/>
     <li:reviews-widget sku="hawley-tv" company-guid="sony"></li:reviews-widget>
   <hr />
     <li:wants-button buy-reasons-list="[&quot;Shipping Included&quot;,&quot;Ease of Purchase&quot;,&quot;Customer Service&quot;,&quot;Customer Reviews&quot;,&quot;Financing&quot;]" sku="hawley-tv" company-guid="sony" min-price="325" max-price="449" default-price="400"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
