chore(seed): updated want

--- a/assets/test/qa-all.html
+++ b/assets/test/qa-all.html
@@ -6,11 +6,11 @@
   <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
-	<script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
+	<li:rating-widget sku="hawley-tv" company-guid="sony"></li:rating-widget>>
   <hr/>
     <li:reviews-widget sku="hawley-tv" company-guid="sony"></li:reviews-widget>
   <hr />
-    <li:wants-button buy-reasons-list="[&quot;Shipping Included&quot;,&quot;Ease of Purchase&quot;,&quot;Customer Service&quot;,&quot;Customer Reviews&quot;,&quot;Financing&quot;]" sku="hawley-tv" company-guid="sony" min-price="325" max-price="449" default-price="400"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+    <li:wants-button buy-reasons-list="[&quot;Shipping Included&quot;,&quot;Ease of Purchase&quot;,&quot;Customer Service&quot;,&quot;Customer Reviews&quot;,&quot;Financing&quot;]" sku="hawley-tv" company-guid="sony" min-price="325" max-price="449" default-price="400"></li:wants-button>
   <hr />
 	<li:endorsements-widget reasons-list="[&quot;long lifespan&quot;,&quot;Slim Enclosure&quot;,&quot;Warranty&quot;,&quot;4K&quot;,&quot;Full array backlit&quot;]" sku="hawley-tv" company-guid="sony"></li:endorsements-widget>
 </body>
