--- a/assets/test/qa1-all-formatted.html
+++ b/assets/test/qa1-all-formatted.html
@@ -40,7 +40,7 @@
     </div>
     <div class="col-lg-4">
       <div class="side block">
-        <li:wants-button buy-reasons-list="[&quot;Buy Reason 1 30 char()#&amp;123456&quot;,&quot;Buy Reason 5 30 char%%@#123456&quot;,&quot;Buy Reason 7 30 char**@#123456&quot;,&quot;Buy Reason 6 30 char##@#123456&quot;,&quot;$&quot;]" sku="hawley1" company-guid="sony" min-price="5" max-price="11" default-price="7"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+        <li:wants-button buy-reasons-list="[&quot;Buy Reason 1 30 char()#&amp;123456&quot;,&quot;Buy Reason 2 30 char$%@!123456&quot;,&quot;Buy Reason 5 30 char%%@#123456&quot;,&quot;$&quot;,&quot;Buy Reason 7 30 char**@#123456&quot;]" sku="hawley1" company-guid="sony" min-price="5" max-price="11" default-price="7"></li:wants-button>
         <li:endorsements-widget reasons-list="[&quot;Endorsement Reason 1 30 char$%&quot;,&quot;Endorsement Reason 2 30 char()&quot;,&quot;Endorsement Reason 5 30 char%%&quot;,&quot;*&quot;,&quot;Endorsement Reason 6 30 char##&quot;]" sku="hawley1" company-guid="sony"></li:endorsements-widget> 
         </div>
     </div>
