--- a/assets/test/qa2-all-formatted.html
+++ b/assets/test/qa2-all-formatted.html
@@ -40,7 +40,7 @@
     </div>
     <div class="col-lg-4">
       <div class="side block">
-        <li:wants-button buy-reason-id-list="59,61,66,63,65" sku="hawley2" company-guid="sony" min-price="8" max-price="15" default-price="10"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+        <li:wants-button buy-reasons-list="[&quot;Hebrew: אני יכול לאכול זכוכית,&quot;,&quot;Estonian: Ma võin klaasi süüa,&quot;,&quot;Swedish: Samma vind som rycker&quot;,&quot;ฉัน&quot;,&quot;বায়ু&quot;]" sku="hawley2" company-guid="sony" min-price="8" max-price="15" default-price="10"></li:wants-button>
         <li:endorsements-widget reasons-list="[&quot;Thai: ฉันสามารถกิน้ว&quot;,&quot;Bengali: গাছ সরে জমি&quot;,&quot;来&quot;,&quot;English: I can eat glass&quot;,&quot;Danish:Jeg kan spise&quot;]" sku="hawley2" company-guid="sony"></li:endorsements-widget>    
         </div>
     </div>
