--- a/assets/test/qa2-want.html
+++ b/assets/test/qa2-want.html
@@ -6,6 +6,6 @@
   <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
-  <li:wants-button buy-reason-id-list="59,61,66,63,65" sku="hawley2" company-guid="sony" min-price="8" max-price="15" default-price="10"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+  <li:wants-button buy-reasons-list="[&quot;Hebrew: אני יכול לאכול זכוכית,&quot;,&quot;Estonian: Ma võin klaasi süüa,&quot;,&quot;Swedish: Samma vind som rycker&quot;,&quot;ฉัน&quot;,&quot;বায়ু&quot;]" sku="hawley2" company-guid="sony" min-price="8" max-price="15" default-price="10"></li:wants-button>
 </body>
 </html>
