--- a/assets/test/qa-all-formatted.html
+++ b/assets/test/qa-all-formatted.html
@@ -40,7 +40,7 @@
     </div>
     <div class="col-lg-4">
       <div class="side block">
-        <li:wants-button buy-reasons-list="[&quot;Shipping Included&quot;,&quot;Ease of Purchase&quot;,&quot;Customer Service&quot;,&quot;Customer Reviews&quot;,&quot;Financing&quot;]" sku="hawley-tv" company-guid="sony" min-price="325" max-price="449" default-price="400"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+        <li:wants-button buy-reasons-list="[&quot;Shipping Included&quot;,&quot;Ease of Purchase&quot;,&quot;Customer Service&quot;,&quot;Customer Reviews&quot;,&quot;Financing&quot;]" sku="hawley-tv" company-guid="sony" min-price="325" max-price="449" default-price="400"></li:wants-button>
         <li:endorsements-widget reasons-list="[&quot;long lifespan&quot;,&quot;Slim Enclosure&quot;,&quot;Warranty&quot;,&quot;4K&quot;,&quot;Full array backlit&quot;]" sku="hawley-tv" company-guid="sony"></li:endorsements-widget>     
         </div>
     </div>
