--- a/assets/test/qa1-all.html
+++ b/assets/test/qa1-all.html
@@ -8,7 +8,7 @@
 <body style="padding:0;margin:0;">
     <li:reviews-widget sku="hawley1" company-guid="sony"></li:reviews-widget>
   <hr />
-    <li:wants-button buy-reason-id-list="69,73,75,77,72" sku="hawley1" company-guid="sony" min-price="5" max-price="11" default-price="7"><button class="li-wants-button" style="display: none;" onclick="LITHIUM.Widgets.WantsButton.toggle(this); return false;">Want</button></li:wants-button>
+    <li:wants-button buy-reasons-list="[&quot;Buy Reason 1 30 char()#&amp;123456&quot;,&quot;Buy Reason 2 30 char$%@!123456&quot;,&quot;Buy Reason 5 30 char%%@#123456&quot;,&quot;$&quot;,&quot;Buy Reason 7 30 char**@#123456&quot;]" sku="hawley1" company-guid="sony" min-price="5" max-price="11" default-price="7"></li:wants-button>
   <hr />
     <li:endorsements-widget id-list="69,70,74,76,78" sku="hawley1" company-guid="sony"></li:endorsements-widget>
 </body>
