chore(seed): added rating mini

--- a/assets/test/index.html
+++ b/assets/test/index.html
@@ -24,6 +24,9 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
+                  <a href="/test/qa-rating.html">Rating Mini</a>
+                </li>
+                <li class="list-item">
                   <a href="/test/qa-rnr.html">RnR</a>
                 </li>
                 <li class="list-item">
@@ -45,6 +48,8 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
+                <a href="/test/qa-rating-formatted.html">Rating Mini</a>
+                </li>
                   <a href="/test/qa-rnr-formatted.html">RnR</a>
                 </li>
                 <li class="list-item">
@@ -68,6 +73,8 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
+                <a href="/test/qa1-rating.html">Rating Mini</a>
+                </li>
                   <a href="/test/qa1-rnr.html">RnR</a>
                 </li>
                 <li class="list-item">
@@ -89,6 +96,8 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
+                  <a href="/test/qa1-rating-formatted.html">Rating Mini</a>
+                </li>
                   <a href="/test/qa1-rnr-formatted.html">RnR</a>
                 </li>
                 <li class="list-item">
@@ -112,6 +121,8 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
+                <a href="/test/qa2-rating.html">Rating Mini</a>
+                </li>
                   <a href="/test/qa2-rnr.html">RnR</a>
                 </li>
                 <li class="list-item">
@@ -133,6 +144,8 @@
             <div class="panel-body">
               <ul class="list-item-group">
                 <li class="list-item">
+                  <a href="/test/qa2-rating-formatted.html">Rating Mini</a>
+                </li>
                   <a href="/test/qa2-rnr-formatted.html">RnR</a>
                 </li>
                 <li class="list-item">
