--- a/assets/test/qa-all-formatted.html
+++ b/assets/test/qa-all-formatted.html
@@ -35,6 +35,9 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="main block">
+        <h1> Mini Rating Widget</h1>
+        <li:rating-widget sku="hawley-tv" company-guid="sony"></li:rating-widget>
+        <hr/>
         <li:reviews-widget sku="hawley-tv" company-guid="sony"></li:reviews-widget>
       </div>
     </div>
