--- a/assets/test/qa-all.html
+++ b/assets/test/qa-all.html
@@ -6,6 +6,7 @@
   <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
+	<h1> Mini Rating Widget</h1>
 	<li:rating-widget sku="hawley-tv" company-guid="sony"></li:rating-widget>
   <hr/>
     <li:reviews-widget sku="hawley-tv" company-guid="sony"></li:reviews-widget>
