--- a/assets/test/qa1-all.html
+++ b/assets/test/qa1-all.html
@@ -6,6 +6,9 @@
   <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
+	<h1> Mini Rating Widget</h1>
+	<li:rating-widget sku="hawley1" company-guid="sony"></li:rating-widget>
+	<hr />
     <li:reviews-widget sku="hawley1" company-guid="sony"></li:reviews-widget>
   <hr />
     <li:wants-button buy-reasons-list="[&quot;Buy Reason 1 30 char()#&amp;123456&quot;,&quot;Buy Reason 2 30 char$%@!123456&quot;,&quot;Buy Reason 5 30 char%%@#123456&quot;,&quot;$&quot;,&quot;Buy Reason 7 30 char**@#123456&quot;]" sku="hawley1" company-guid="sony" min-price="5" max-price="11" default-price="7"></li:wants-button>
