--- a/assets/test/qa2-all.html
+++ b/assets/test/qa2-all.html
@@ -6,6 +6,9 @@
   <script id="li-syndicate" src="http://distributed.qa.lcloud.com/assets/widgets/js/scripts/syndicate.js"></script>
 </head>
 <body style="padding:0;margin:0;">
+	<h1> Mini Rating Widget</h1>
+	<li:rating-widget sku="hawley2" company-guid="sony"></li:rating-widget>
+  <hr/>
     <li:reviews-widget sku="hawley2" company-guid="sony"></li:reviews-widget>
   <hr />
     <li:wants-button buy-reasons-list="[&quot;Hebrew: אני יכול לאכול זכוכית,&quot;,&quot;Estonian: Ma võin klaasi süüa,&quot;,&quot;Swedish: Samma vind som rycker&quot;,&quot;ฉัน&quot;,&quot;বায়ু&quot;]" sku="hawley2" company-guid="sony" min-price="8" max-price="15" default-price="10"></li:wants-button>
